--- a/index.html
+++ b/index.html
@@ -1,104 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Base64 & Decimal Converter</title>
-<style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    textarea, input { width: 100%; padding: 8px; margin-top: 5px; }
-    button { padding: 8px 12px; margin-top: 10px; cursor: pointer; }
-    .section { margin-bottom: 20px; padding: 10px; border: 1px solid #ccc; border-radius: 5px; }
-    label { font-weight: bold; }
-</style>
+  <meta charset="UTF-8">
+  <title>Bytes Converter</title>
+  <style>
+    body { font-family: Arial, sans-serif; max-width: 800px; margin: auto; padding: 20px; }
+    h2 { margin-top: 30px; }
+    textarea, input { width: 100%; padding: 10px; margin-top: 5px; margin-bottom: 10px; font-size: 14px; }
+    button { padding: 10px 15px; font-size: 14px; cursor: pointer; margin: 5px 0; }
+    .section { border: 1px solid #ccc; padding: 15px; border-radius: 5px; margin-bottom: 20px; }
+  </style>
 </head>
 <body>
 
-<h2>Base64 & Decimal Converter</h2>
+<h1>Bytes & Base64 Converter</h1>
 
 <div class="section">
-    <label>Base64 to Bytes (Hex):</label>
-    <textarea id="base64Input" placeholder="Masukkan Base64 di sini"></textarea>
-    <button onclick="base64ToBytes()">Convert</button>
-    <textarea id="bytesOutput" readonly placeholder="Hasil Bytes (0x...)"></textarea>
+  <h2>Base64 ⇄ Bytes</h2>
+  <label>Base64 Input:</label>
+  <input type="text" id="base64Input">
+  <button onclick="base64ToBytes()">Base64 → Bytes (0x)</button>
+  
+  <label>Bytes Input (0x...):</label>
+  <input type="text" id="bytesInput">
+  <button onclick="bytesToBase64()">Bytes → Base64</button>
+  
+  <label>Output:</label>
+  <textarea id="output1" readonly></textarea>
 </div>
 
 <div class="section">
-    <label>Bytes (Hex) to Base64:</label>
-    <textarea id="hexInput" placeholder="Masukkan Hex (dengan atau tanpa 0x)"></textarea>
-    <button onclick="bytesToBase64()">Convert</button>
-    <textarea id="base64Output" readonly placeholder="Hasil Base64"></textarea>
-</div>
-
-<div class="section">
-    <label>Decimal Array to Bytes32:</label>
-    <textarea id="decimalInput" placeholder="[0,0,0,0,...]"></textarea>
-    <button onclick="decimalToBytes32()">Convert</button>
-    <textarea id="bytes32Output" readonly placeholder="Hasil Bytes32 (0x...)"></textarea>
-</div>
-
-<div class="section">
-    <label>Bytes32 to Decimal Array:</label>
-    <textarea id="bytes32Input" placeholder="0x..."></textarea>
-    <button onclick="bytes32ToDecimal()">Convert</button>
-    <textarea id="decimalOutput" readonly placeholder="[0,0,0,...]"></textarea>
+  <h2>Decimal Array ⇄ Bytes32</h2>
+  <label>Decimal Array Input:</label>
+  <textarea id="decimalInput" placeholder="[0,0,0,...]"></textarea>
+  <button onclick="decimalToBytes32()">Decimal → Bytes32 (0x)</button>
+  
+  <label>Bytes32 Input (0x...):</label>
+  <input type="text" id="bytes32Input">
+  <button onclick="bytes32ToDecimal()">Bytes32 → Decimal Array</button>
+  
+  <label>Output:</label>
+  <textarea id="output2" readonly></textarea>
 </div>
 
 <script>
 function base64ToBytes() {
-    let input = document.getElementById("base64Input").value.trim();
-    if (!input) {
-        alert("Base64 tidak boleh kosong!");
-        return;
-    }
-    try {
-        let buf = Buffer.from(input, 'base64');
-        document.getElementById("bytesOutput").value = '0x' + buf.toString('hex');
-    } catch (e) {
-        alert("Base64 tidak valid!");
-    }
+  try {
+    const b64 = document.getElementById("base64Input").value.trim();
+    if (!b64) throw "Empty input";
+    const bytes = atob(b64).split('').map(c => c.charCodeAt(0));
+    document.getElementById("output1").value = "0x" + bytes.map(b => b.toString(16).padStart(2, '0')).join('');
+  } catch (e) {
+    document.getElementById("output1").value = "Invalid Base64";
+  }
 }
 
 function bytesToBase64() {
-    let hex = document.getElementById("hexInput").value.trim().replace(/^0x/, '');
-    if (!hex || hex.length % 2 !== 0 || !/^[0-9a-fA-F]+$/.test(hex)) {
-        alert("Hex tidak valid!");
-        return;
-    }
-    let buf = Buffer.from(hex, 'hex');
-    document.getElementById("base64Output").value = buf.toString('base64');
+  try {
+    let hex = document.getElementById("bytesInput").value.trim();
+    if (!hex) throw "Empty input";
+    if (hex.startsWith("0x")) hex = hex.slice(2);
+    if (!/^[0-9a-fA-F]+$/.test(hex) || hex.length % 2 !== 0) throw "Invalid hex";
+    const bytes = new Uint8Array(hex.match(/.{1,2}/g).map(byte => parseInt(byte, 16)));
+    let binary = '';
+    bytes.forEach(b => binary += String.fromCharCode(b));
+    document.getElementById("output1").value = btoa(binary);
+  } catch (e) {
+    document.getElementById("output1").value = "Invalid Bytes";
+  }
 }
 
 function decimalToBytes32() {
-    let input = document.getElementById("decimalInput").value.trim();
-    input = input.replace(/^\[|\]$/g, ''); // hapus [ ]
-    let decimals = input.split(',')
-                        .map(x => parseInt(x.trim()))
-                        .filter(x => !isNaN(x));
-    if (decimals.length === 0) {
-        alert("Decimal array tidak valid!");
-        return;
-    }
-    let buf = Buffer.from(decimals);
-    let hex = '0x' + buf.toString('hex').padStart(64, '0');
-    document.getElementById("bytes32Output").value = hex;
+  try {
+    const val = document.getElementById("decimalInput").value.trim();
+    if (!val) throw "Empty input";
+    const arr = JSON.parse(val);
+    if (!Array.isArray(arr) || arr.length !== 32) throw "Array must be length 32";
+    const hex = arr.map(b => {
+      if (typeof b !== 'number' || b < 0 || b > 255) throw "Invalid byte value";
+      return b.toString(16).padStart(2, '0');
+    }).join('');
+    document.getElementById("output2").value = "0x" + hex;
+  } catch (e) {
+    document.getElementById("output2").value = "Invalid Decimal Array";
+  }
 }
 
 function bytes32ToDecimal() {
-    let hex = document.getElementById("bytes32Input").value.trim().replace(/^0x/, '');
-    if (!hex || hex.length % 2 !== 0 || !/^[0-9a-fA-F]+$/.test(hex)) {
-        alert("Bytes32 tidak valid!");
-        return;
+  try {
+    let hex = document.getElementById("bytes32Input").value.trim();
+    if (!hex) throw "Empty input";
+    if (hex.startsWith("0x")) hex = hex.slice(2);
+    if (!/^[0-9a-fA-F]+$/.test(hex) || hex.length !== 64) throw "Must be 32 bytes";
+    const arr = [];
+    for (let i = 0; i < hex.length; i += 2) {
+      arr.push(parseInt(hex.substr(i, 2), 16));
     }
-    let buf = Buffer.from(hex, 'hex');
-    let arr = Array.from(buf.values());
-    document.getElementById("decimalOutput").value = `[${arr.join(',')}]`;
+    document.getElementById("output2").value = JSON.stringify(arr);
+  } catch (e) {
+    document.getElementById("output2").value = "Invalid Bytes32";
+  }
 }
-</script>
-
-<!-- Tambah library Buffer agar jalan di browser -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/buffer/6.0.3/buffer.min.js"></script>
-<script>
-    window.Buffer = buffer.Buffer;
 </script>
 
 </body>
