--- a/decode/index.html
+++ b/decode/index.html
@@ -23,7 +23,7 @@ function extractExtraArgs() {
         bytes.push(parseInt(hex.substr(i, 2), 16));
     }
 
-    // Cari pola 0x00 12 lalu ambil 64 byte setelahnya (32 byte data + 32 byte padding)
+    // Cari pola 0x00 12 lalu ambil 32 byte setelahnya
     let idx = -1;
     for (let i = 0; i < bytes.length - 2; i++) {
         if (bytes[i] === 0x00 && bytes[i + 1] === 0x12) {
@@ -37,7 +37,7 @@ function extractExtraArgs() {
         return;
     }
 
-    let extraArgsBytes = bytes.slice(idx, idx + 64);
+    let extraArgsBytes = bytes.slice(idx, idx + 32);
     let extraArgsHex = "0x" + extraArgsBytes.map(b => b.toString(16).padStart(2, "0")).join("");
     document.getElementById("result").textContent = extraArgsHex;
 }
